class CreateUsers < ActiveRecord::Migration[8.1]
  def change
    create_table :users do |t|
      t.string   :email,           null: false
      t.string   :password_digest, null: false
      t.string   :full_name
      t.string   :phone
      t.datetime :verified_at
      t.timestamps
    end

    add_index :users, :email, unique: true
  end
end
